go live initial

--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -118,7 +118,8 @@ h1, h2, h3, h4, h5, h6 {
       line-height: 3rem;
       text-transform: uppercase;
       // letter-spacing:.02em; // Open sans    
-      letter-spacing:.04em; // franklin   
+      // letter-spacing:.04em; // franklin   
+      
     }
 
     .subWrap {
@@ -133,7 +134,7 @@ h1, h2, h3, h4, h5, h6 {
     .tagline { 
         .tagWrap {
             // font-size: 4rem; // Open Sans Condensed                  
-            font-size: 4rem; // franklin      
+            font-size: 5.5rem; // franklin      
             // font-size: 4rem; // raleway
             line-height: 4rem;  // Open Sans Condensed           
             // line-height: 4.5rem; // franlin
