--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -39,6 +39,7 @@
 @import "timeline-list";
 @import "options-menu";
 @import "productions-section";
+@import "tour-list";
 @import "mc-signup";
 @import "staff-bios";
 @import "credits-list";
