--- a/sass/_slider-bxslider-ace.scss
+++ b/sass/_slider-bxslider-ace.scss
@@ -218,3 +218,39 @@
 // }
 
 
+
+
+
+/* IMAGE CAPTIONS */
+
+.bx-wrapper .bx-caption {
+	position: absolute;
+	bottom: -40px;
+	left: 0;
+	// background: #666\9;
+	// background: rgba(80, 80, 80, 0.75);
+	width: 100%;
+}
+
+.bx-wrapper .bx-caption span {
+	color: #fff;
+	font-family: Arial;
+	display: block;
+	font-size: .85em;
+	padding: 10px;
+}
+
+
+
+
+.bx-wrapper .bx-pager,
+.bx-wrapper .bx-controls-auto {
+	position: absolute;
+	bottom: -60px;
+	width: 100%;
+}
+
+
+
+
+
