--- a/sass/_logo-list.scss
+++ b/sass/_logo-list.scss
@@ -18,7 +18,7 @@
 	// 	width: 660px;
 	// }
 
-	width: 550px;	
+	width: 790px;	
 }
 
 .logo-item {
@@ -34,7 +34,10 @@
 		background-position: -220px 0;
 	}
 	&.arts {
-		background-position: -330px 0;
+		background-image: none;
+		width: 330px;
+		margin-left: 20px;
+		// background-position: -330px 0;
 	}
 	// &:nth-child(4) {
 	// 	background-position: -440px 0;
