--- a/sass/_slider-bxslider-default.scss
+++ b/sass/_slider-bxslider-default.scss
@@ -45,12 +45,12 @@
     	transform: translatez(0);
 }
 
-.bx-wrapper .bx-pager,
-.bx-wrapper .bx-controls-auto {
-	position: absolute;
-	bottom: -30px;
-	width: 100%;
-}
+// .bx-wrapper .bx-pager,
+// .bx-wrapper .bx-controls-auto {
+// 	position: absolute;
+// 	bottom: -30px;
+// 	width: 100%;
+// }
 
 /* LOADER */
 
@@ -184,21 +184,21 @@
 	width: 35px;
 }
 
-/* IMAGE CAPTIONS */
+// /* IMAGE CAPTIONS */
 
-.bx-wrapper .bx-caption {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	background: #666\9;
-	background: rgba(80, 80, 80, 0.75);
-	width: 100%;
-}
+// .bx-wrapper .bx-caption {
+// 	position: absolute;
+// 	bottom: 0;
+// 	left: 0;
+// 	background: #666\9;
+// 	background: rgba(80, 80, 80, 0.75);
+// 	width: 100%;
+// }
 
-.bx-wrapper .bx-caption span {
-	color: #fff;
-	font-family: Arial;
-	display: block;
-	font-size: .85em;
-	padding: 10px;
-}
+// .bx-wrapper .bx-caption span {
+// 	color: #fff;
+// 	font-family: Arial;
+// 	display: block;
+// 	font-size: .85em;
+// 	padding: 10px;
+// }
