--- a/sass/modules/_programme-section.scss
+++ b/sass/modules/_programme-section.scss
@@ -17,3 +17,10 @@
 .class-item {
 	margin-bottom: 3rem;
 }
+
+.class-price {
+	color: $primary_color;
+}
+.class-times {
+	text-transform: none ;
+}
