--- a/sass/nav/_nav-desktop.scss
+++ b/sass/nav/_nav-desktop.scss
@@ -47,7 +47,7 @@
         background-color: $dark_grey;   
         margin: 0;
         padding:0;
-        width: 100%;
+        min-width: 100%;
         li {
             float: none;
             text-align: left;
