--- a/sass/modules/_hero.scss
+++ b/sass/modules/_hero.scss
@@ -7,6 +7,7 @@
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
+    background-color: #000000;
     
     /* PAGE SPECIFIC POSITIONING */
 
